--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paya St Coffee</title>
+  
   <!-- GOOGLE FONT -->
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./img/colored_logo.png">
@@ -15,7 +16,9 @@
 
   <!-- Navbar -->
   <nav class="navbar">
-    <div class="logo"><a href="./index.html"><img src="./img/logo1.png" alt="Paya St Logo"></a></div>
+    <div class="logo">
+      <a href="./index.html"><img src="./img/logo1.png" alt="Paya St Logo"></a>
+    </div>
     <ul>
       <li><a href="./Landing_page.html">Landing Page</a></li>
       <li><a href="./Feature_Page.html">Feature Page</a></li>
@@ -35,16 +38,17 @@
 
     <!-- Video -->
     <video autoplay muted loop playsinline>
-      <source src="./media /FeaturVID1.mp4" type="video/mp4">
+      <source src="./media/FeaturVID1.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
+  </section>
 
-    <!-- Footer -->
-    <section class="footer">
-      <a href="./index.html"><img src="./img/Footer.png" alt="Footer Logo"></a>
-    </section>
+  <!-- Footer -->
+  <section class="footer">
+    <a href="./index.html"><img src="./img/Footer.png" alt="Footer Logo"></a>
   </section>
 
   <script src="./js/script.js"></script>
 </body>
 </html>
+
