--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 </video>
 
 
-  <!-- Footer -->
-  <section class="footer">
-    <a href="./index.html"><img src="./img/Footer.png" alt="Footer Logo"></a>
-  </section>
+  <!-- Footer Section -->
+<footer class="footer">
+  <a href="./index.html"><img src="./img/Footer.png" alt="Footer Logo"></a>
+</footer>
 
   <script src="./js/script.js"></script>
 </body>
