--- a/Landing_page.html
+++ b/Landing_page.html
@@ -162,10 +162,13 @@
   <div class="contact-content">
     <!-- Left: Video -->
     <div class="contact-image">
-     <video autoplay muted loop playsinline>
-  <source src="./media/Location.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+  <video autoplay muted loop playsinline>
+    <source src="./media/Location.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
+
+
 
     </div>
 
