--- a/Feature_Page.html
+++ b/Feature_Page.html
@@ -32,7 +32,7 @@
 
  <section class="about">
 <div class="about-video">
-  <img src="./media/Introvid.png" alt="About Paya Street" />
+  <img src="./img/IMG_2366.JPG" alt="About Paya Street" />
 </div>
 
 
@@ -46,10 +46,7 @@
 </section>
 
 
-  
-
-    <!-- GALLERY SECTION -->
-   <!-- GALLERY SECTION -->
+     <!-- GALLERY SECTION -->
 <section class="gallery">
     <h2 class="gallery-title">Brew-tiful Moments</h2>
   
