--- a/Feature_Page.html
+++ b/Feature_Page.html
@@ -105,36 +105,37 @@
     </div>
   </section>
   
-      <!-- Contact Section -->
+    <!-- Contact Section -->
 <section class="contact">
-    <h2>Location & Contact</h2>
-    
-    <div class="contact-content">
-      <!-- Left: Video -->
-      <div class="contact-image">
-        <video autoplay muted loop playsinline>
-          <source src="./media /about.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </div>
+  <h2>Location & Contact</h2>
   
-      <!-- Right: Info -->
-      <div class="contact-info">
-        <h3>Where to Find Us</h3>
-        <p>NewPoint Mall (Nepo Quad), Doña Teresa Ave, Nepo Complex, Angeles City, Pampanga</p>
-  
-        <h3>Operating Hours</h3>
-        <p>7:00 AM – 9:00 PM, Daily</p>
-  
-        <h3>Contact Us</h3>
-        <p><strong>Email:</strong> payastreetcoffee@gmail.com</p>
-        <p><strong>Instagram:</strong> <a href="https://instagram.com/payast.coffee" target="_blank">@payast.coffee</a></p>
-        <p><strong>Facebook:</strong> <a href="https://facebook.com/PayaSt.Coffee" target="_blank">Paya St. Coffee</a></p>
-      </div>
+  <div class="contact-content">
+    <!-- Left: Video -->
+    <div class="contact-image">
+  <video autoplay muted loop playsinline>
+    <source src="./media/Location.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
+
     </div>
-  </section>
-  <!-- Persistent Background Music (hidden) -->
-<iframe src="player.html" id="music-frame"></iframe>
+
+    <!-- Right: Info -->
+    <div class="contact-info">
+      <h3>Where to Find Us</h3>
+      <p>NewPoint Mall (Nepo Quad), Doña Teresa Ave, Nepo Complex, Angeles City, Pampanga</p>
+
+      <h3>Operating Hours</h3>
+      <p>7:00 AM – 9:00 PM, Daily</p>
+
+      <h3>Contact Us</h3>
+      <p><strong>Email:</strong> payastreetcoffee@gmail.com</p>
+      <p><strong>Instagram:</strong> <a href="https://instagram.com/payast.coffee" target="_blank">@payast.coffee</a></p>
+      <p><strong>Facebook:</strong> <a href="https://facebook.com/PayaSt.Coffee" target="_blank">Paya St. Coffee</a></p>
+    </div>
+  </div>
+</section>
+  
 
       
  <!-- INFOGRAPHIC SECTION -->
