--- a/Feature_Page.html
+++ b/Feature_Page.html
@@ -29,21 +29,37 @@
   </div>
 </section>
 
-<!-- ABOUT SECTION -->
+<!-- About Section -->
 <section class="about">
   <div class="about-video">
-    <img src="./img/abour_paya.JPG" alt="About Paya Street" />
+    <video autoplay muted loop playsinline>
+      <source src="../media/Introvid.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </div>
 
   <div class="about-text">
     <h2>ABOUT PAYA STREET</h2>
     <p>
-      Paya Street Café is your cozy retreat in the heart of Angeles City, where every cup of coffee is crafted with care and every bite is made to delight. Whether you're looking for a morning pick-me-up, a relaxing afternoon break, or a spot to catch up with friends, our café offers the perfect mix of comfort, warmth, and flavor. With a menu featuring specialty coffees, fresh pastries, and savory snacks, paired with a welcoming ambiance and soft music, Paya Street Café is more than just a place to eat and drink—it's a place to feel at home.
+      Paya Street Café is your cozy retreat in the heart of Angeles City,
+      where every cup of coffee is crafted with care and every bite is made
+      to delight. Whether you're looking for a morning pick-me-up, a relaxing
+      afternoon break, or a spot to catch up with friends, our café offers
+      the perfect mix of comfort, warmth, and flavor. With a menu featuring
+      specialty coffees, fresh pastries, and savory snacks, paired with a
+      welcoming ambiance and soft music, Paya Street Café is more than just
+      a place to eat and drink—it’s a place to feel at home.
     </p>
 
     <h3>Sip, Savor, Relax</h3>
     <p>
-      At Paya Street Café, every visit is an experience. Delight in our carefully crafted specialty coffees, each cup brewed to perfection. Pair your drink with our freshly baked pastries and savory treats, made daily to satisfy every craving. Immerse yourself in the warm, inviting ambiance. Whether you're meeting friends or enjoying a quiet moment alone, Paya Street Café is your go-to destination to sip, savor, and unwind.
+      At Paya Street Café, every visit is an experience. Delight in our
+      carefully crafted specialty coffees, each cup brewed to perfection.
+      Pair your drink with our freshly baked pastries and savory treats,
+      made daily to satisfy every craving. Immerse yourself in the warm,
+      inviting ambiance. Whether you're meeting friends or enjoying a quiet
+      moment alone, Paya Street Café is your go-to destination to relax,
+      recharge, and indulge in life’s simple pleasures.
     </p>
   </div>
 </section>
