--- a/Feature_Page.html
+++ b/Feature_Page.html
@@ -32,10 +32,11 @@
 <!-- About Section -->
 <section class="about">
   <div class="about-video">
-    <video autoplay muted loop playsinline>
-      <source src="../media/Introvid.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+   <video autoplay muted loop playsinline controls style="width:100%; border:2px solid red;">
+  <source src="media/Introvid.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
   </div>
 
   <div class="about-text">
