--- a/Feature_Page.html
+++ b/Feature_Page.html
@@ -121,19 +121,16 @@
     </div>
   </section>
   
-    <!-- Contact Section -->
+   <!-- Contact Section -->
 <section class="contact">
   <h2>Location & Contact</h2>
-  
+
   <div class="contact-content">
     <!-- Left: Video -->
     <div class="contact-image">
-  <video autoplay muted loop playsinline>
-    <source src="./media/Location.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-</div>
-
+      <video autoplay muted loop playsinline>
+        <source src="./media/about.mp4" type="video/mp4">
+      </video>
     </div>
 
     <!-- Right: Info -->
@@ -146,8 +143,8 @@
 
       <h3>Contact Us</h3>
       <p><strong>Email:</strong> payastreetcoffee@gmail.com</p>
-      <p><strong>Instagram:</strong> <a href="https://instagram.com/payast.coffee" target="_blank">@payast.coffee</a></p>
-      <p><strong>Facebook:</strong> <a href="https://facebook.com/PayaSt.Coffee" target="_blank">Paya St. Coffee</a></p>
+      <p><strong>Instagram:</strong> <a href="https://instagram.com/payast.coffee">@payast.coffee</a></p>
+      <p><strong>Facebook:</strong> <a href="https://facebook.com/PayaSt.Coffee">Paya St. Coffee</a></p>
     </div>
   </div>
 </section>
