--- a/Feature_Page.html
+++ b/Feature_Page.html
@@ -69,7 +69,7 @@
 <div class="gallery-row">
   <div class="gallery-video">
     <video autoplay muted loop playsinline>
-      <source src="./media/featureVID2.mp4" type="video/mp4">
+<source src="../media/featureVID2.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -86,7 +86,7 @@
 <div class="gallery-row reverse">
   <div class="gallery-video">
     <video autoplay muted loop playsinline>
-      <source src="./media/FeatureVid3 (online-video-cutter.com).mp4" type="video/mp4">
+      <source src="../media/FeatureVid3 (online-video-cutter.com).mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -103,7 +103,7 @@
 <div class="gallery-row">
   <div class="gallery-video">
     <video autoplay muted loop playsinline>
-      <source src="./media/FeatureVid4.mp4" type="video/mp4">
+<source src="../media/FeatureVID4.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
