--- a/Feature_Page.html
+++ b/Feature_Page.html
@@ -68,10 +68,9 @@
  <!-- Row 1 -->
 <div class="gallery-row">
   <div class="gallery-video">
-    <video autoplay muted loop playsinline>
-<source src="../media/featureVID2.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <video autoplay loop muted playsinline>
+  <source src="../media/featureVID2.mp4" type="video/mp4">
+</video>
   </div>
 
   <div class="gallery-text">
