--- a/Feature_Page.html
+++ b/Feature_Page.html
@@ -64,13 +64,12 @@
   </div>
 </section>
 
-
- <!-- Row 1 -->
+<!-- Row 1 -->
 <div class="gallery-row">
   <div class="gallery-video">
     <video autoplay loop muted playsinline>
-  <source src="../media/featureVID2.mp4" type="video/mp4">
-</video>
+      <source src="https://sammyvie.github.io/Paya-Street/media/featureVID2.mp4" type="video/mp4">
+    </video>
   </div>
 
   <div class="gallery-text">
@@ -81,12 +80,11 @@
   </div>
 </div>
 
-<!-- Row 2 (reversed layout) -->
+<!-- Row 2 -->
 <div class="gallery-row reverse">
   <div class="gallery-video">
     <video autoplay muted loop playsinline>
-      <source src="../media/FeatureVid3 (online-video-cutter.com).mp4" type="video/mp4">
-      Your browser does not support the video tag.
+      <source src="https://sammyvie.github.io/Paya-Street/media/FeatureVid3.mp4" type="video/mp4">
     </video>
   </div>
 
@@ -102,8 +100,7 @@
 <div class="gallery-row">
   <div class="gallery-video">
     <video autoplay muted loop playsinline>
-<source src="../media/FeatureVID4.mp4" type="video/mp4">
-      Your browser does not support the video tag.
+      <source src="https://sammyvie.github.io/Paya-Street/media/FeatureVID4.mp4" type="video/mp4">
     </video>
   </div>
 
@@ -114,6 +111,7 @@
     </p>
   </div>
 </div>
+
 
   
    <!-- Contact Section -->
