--- a/Feature_Page.html
+++ b/Feature_Page.html
@@ -83,9 +83,7 @@
 <!-- Row 2 -->
 <div class="gallery-row reverse">
   <div class="gallery-video">
-    <video autoplay muted loop playsinline>
-      <source src="https://sammyvie.github.io/Paya-Street/media/FeatureVid3.mp4" type="video/mp4">
-    </video>
+    <video src="https://sammyvie.github.io/Paya-Street/media/featureVID3.mp4" autoplay muted loop playsinline></video>
   </div>
 
   <div class="gallery-text">
@@ -99,9 +97,7 @@
 <!-- Row 3 -->
 <div class="gallery-row">
   <div class="gallery-video">
-    <video autoplay muted loop playsinline>
-      <source src="https://sammyvie.github.io/Paya-Street/media/FeatureVID4.mp4" type="video/mp4">
-    </video>
+    <video src="https://sammyvie.github.io/Paya-Street/media/featureVID4.mp4" autoplay muted loop playsinline></video>
   </div>
 
   <div class="gallery-text">
