--- a/Feature_Page.html
+++ b/Feature_Page.html
@@ -64,50 +64,53 @@
   </div>
 </section>
 
-<!-- Row 1 -->
-<div class="gallery-row">
-  <div class="gallery-video">
-    <video autoplay loop muted playsinline>
-      <source src="https://sammyvie.github.io/Paya-Street/media/featureVID2.mp4" type="video/mp4">
-    </video>
+<section class="gallery">
+  <h2 class="gallery-title">Brew-tiful Moments</h2>
+
+  <!-- Row 1 -->
+  <div class="gallery-row">
+    <div class="gallery-video">
+      <video autoplay loop muted playsinline>
+        <source src="https://sammyvie.github.io/Paya-Street/media/featureVID2.mp4" type="video/mp4">
+      </video>
+    </div>
+
+    <div class="gallery-text">
+      <h3>Fresh Bakes, Fresh Moments</h3>
+      <p>
+        At Paya Street Café, every visit is an experience. Pair your drink with freshly baked pastries and savory treats, made daily to satisfy every craving.
+      </p>
+    </div>
   </div>
 
-  <div class="gallery-text">
-    <h3>Fresh Bakes, Fresh Moments</h3>
-    <p>
-      At Paya Street Café, every visit is an experience. Pair your drink with freshly baked pastries and savory treats, made daily to satisfy every craving.
-    </p>
-  </div>
-</div>
+  <!-- Row 2 -->
+  <div class="gallery-row reverse">
+    <div class="gallery-video">
+      <video src="https://sammyvie.github.io/Paya-Street/media/featureVID3.mp4" autoplay muted loop playsinline></video>
+    </div>
 
-<!-- Row 2 -->
-<div class="gallery-row reverse">
-  <div class="gallery-video">
-    <video src="https://sammyvie.github.io/Paya-Street/media/featureVID3.mp4" autoplay muted loop playsinline></video>
-  </div>
-
-  <div class="gallery-text">
-    <h3>Community & Cozy Vibes</h3>
-    <p>
-      Whether you're meeting friends or enjoying a quiet moment alone, our café offers the perfect ambiance to relax and unwind.
-    </p>
-  </div>
-</div>
-
-<!-- Row 3 -->
-<div class="gallery-row">
-  <div class="gallery-video">
-    <video src="https://sammyvie.github.io/Paya-Street/media/featureVID4.mp4" autoplay muted loop playsinline></video>
+    <div class="gallery-text">
+      <h3>Community & Cozy Vibes</h3>
+      <p>
+        Whether you're meeting friends or enjoying a quiet moment alone, our café offers the perfect ambiance to relax and unwind.
+      </p>
+    </div>
   </div>
 
-  <div class="gallery-text">
-    <h3>Crafting the Perfect Cup</h3>
-    <p>
-      Step behind the counter and see how every cup of coffee is carefully brewed. From the aroma to the final pour, every detail is made to delight.
-    </p>
-  </div>
-</div>
+  <!-- Row 3 -->
+  <div class="gallery-row">
+    <div class="gallery-video">
+      <video src="https://sammyvie.github.io/Paya-Street/media/featureVID4.mp4" autoplay muted loop playsinline></video>
+    </div>
 
+    <div class="gallery-text">
+      <h3>Crafting the Perfect Cup</h3>
+      <p>
+        Step behind the counter and see how every cup of coffee is carefully brewed. From the aroma to the final pour, every detail is made to delight.
+      </p>
+    </div>
+  </div>
+</section>
 
   
    <!-- Contact Section -->
